codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__math_interruption_tests__answer_math_narrow.snap
---
source: tui/src/app/tests/math_interruption_tests.rs
expression: rendered
---
• Intro.

  $$
  \frac{a+b+c+d+e+f}
  {g+h}

■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
