codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__math_interruption_tests__plan_error_math_narrow.snap
---
source: tui/src/app/tests/math_interruption_tests.rs
expression: rendered
---
• Proposed Plan
 
 
  Intro.
  
  $$
  \frac{a+b+c+d+e+
  f}{g+h}
 

■ Server error
